# 3-package-red_panda

./: Pipfile  README.md  example.py  pyproject.toml  test_pipette.py
.githooks/: commit-msg
.github/workflows/: build.yml
sciencii/: __init__.py  test_tube.py
src/sciencii/: __init__.py  __main__.py  dna_helix.py  molecule_caption.py  periodic_art.py  periodic_table.py  pipette.py  test_tube.py
tests/: periodic_test_info.py  test_dna_helix.py  test_molecule_caption.py  test_periodic-table.py  test_pipette.py  test_test_tube.py
