[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sciencii"
version = "0.1.0"
description = "ASCII art generator for science-themed visuals"
requires-python = ">=3.9"
dependencies = ["mendeleev"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
sciencii = "sciencii.__main__:main"
